--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="card__footer">
             <div class="content">
                 <div class="content__top">
-                    <h3>Plau</h3>
+                    <h3>Play</h3>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 21 5" class="content__icon">
                         <path fill="currentColor" fill-rule="evenodd" d="M5 2.5C5 3.88071 3.88071 5 2.5 5S0 3.88071 0 2.5 1.11929 0 2.5 0 5 1.11929 5 2.5Zm8 0C13 3.88071 11.8807 5 10.5 5 9.11929 5 8 3.88071 8 2.5S9.11929 0 10.5 0C11.8807 0 13 1.11929 13 2.5ZM18.5 5C19.8807 5 21 3.88071 21 2.5S19.8807 0 18.5 0 16 1.11929 16 2.5 17.1193 5 18.5 5Z" clip-rule="evenodd" />
                     </svg>
